# oxidot

./: CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  REUSE.toml  deny.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: quality.yaml
src/: cluster.rs  config.rs  lib.rs  main.rs  path.rs  store.rs
src/cluster/: deploy.rs  domain.rs  model.rs  sparse.rs
test/: main.rs
