# SPDX-FileCopyrightText: 2025 Jason Pena <jasonpena@awkless.com>
# SPDX-License-Identifier: MIT

[package]
name = "oxidot"
version = "0.1.0"
keywords = ["dotfile-manager", "dotfiles", "cli-tool"]
categories = ["command-line-utilities"]
repository = "https://github.com/awkless/ocd.git"
readme = "README.md"
authors = ["Jason Pena <jasonpena@awkless.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.82.0"

[lib]
doctest = false

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
anyhow = "1.0.100"
auth-git2 = "0.5.8"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
git2 = "0.20.2"
glob = "0.3.3"
indicatif = "0.18.3"
inquire = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
simple_test_case = "1.3.0"
simple_txtar = "1.1.0"
